src/app/page.module.scss
@use "wood-theme" as wood;

.main {
  display: block;
  padding: 1em 5%;

  text-align: center;


  h1 {
    padding: 0.5em;
    margin: 1em 0;

    border-radius: 10px;

    color: wood.$walnut-dark0;
    @include wood.straight-grain-1-pine-dark-bg(0deg);
  }

  h2 {
    padding: 0.5em;
    margin: 1em 0;

    border-radius: 10px;

    color: wood.$pine-light0;
    @include wood.straight-grain-1-walnut-light-bg(0deg);
  }

  .hook {
    display: flex;
    flex-direction: row;
    align-items: center;


    .profilePicBackground { 
      flex: 30%;

      margin: 0 2%; //keep small amount of space between siblings in same row


      //maintain aspect ratio
      aspect-ratio: 1/1;

      //used to allow absolute positioning for child image
      position: relative;

      @include wood.straight-grain-1-walnut-light-bg(45deg);
      border-radius: 50%;

      
      .profilePic {
        //this portion centers the image horizontally and vertically to the parent element
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);

        border-radius: 50%; //makes the div into a circle (if the element has the same width and height)
        width: 90%;
        height: auto; //maintain same aspect ratio
      }
    }
    
    .pitch {
      flex: 70%;
      padding: 2em;
      border-radius: 10px;


      @include wood.straight-grain-1-walnut-light-bg(0deg);
      color: wood.$basswood-light0;

      text-align: center;
      font-weight: bold;
      font-size: 1.3em;
      line-height: 2em; //space between line of text

    }
  }

  .cardContainer {
    width: 100%;
    display: grid;
    grid-auto-rows: 1fr;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 1em;
    justify-content: center;
  }

  .cardContainer.projects {
    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
  }

  .skillWrapper {
    h1 {
      margin: 1em 0;
    }
  }


  .resumeButton {
    margin: 1em;
    padding: 1em;
    width: 70%;
    max-width: 600px;
    cursor: pointer;

    transition: filter 0.5s;
    filter: brightness(100%);

    @include wood.straight-grain-1-pine-dark-bg(0deg);
    border-radius: 10px;
   // box-shadow: 0 0 10px 10px rgba(0,0,0,0.5);

    color: wood.$ebony-dark2;
    font-size: 2em;
    font-weight: bold;

    &:hover {
      filter: brightness(60%);
    }
  }

  
  
}

@media screen and (max-width: 900px) {
  .main {
    .hook {
      display: block; //stack children top to bottom instead of using flex container

      .profilePicBackground { 
        margin: 10px auto; //center element horizontally and add 10px top and bottom margin
        width: 50%;
      }
      
      .pitch {
        margin: auto; //center element horizontally
        width: 90%; //expand to 90% of parent
      }
    }

  }
}

